--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: 'Chakra Petch', sans-serif;
+ /*   font-size: 2px; */
+    font-weight: bold;
+
   }
-  canvas {
+  
+canvas {
     display: block;
   }
   
